--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">To do list</string>
     <string name="label_new_task">Criar Tarefa</string>
+    <string name="label_tasks">Tarefas</string>
+    <string name="label_description_new_task">nova tarefa</string>
 </resources>
