--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="label_description_new_task">nova tarefa</string>
     <string name="label_edit">Editar</string>
     <string name="label_delete">Deletar</string>
+    <string name="label_you_dont_have_tasks">Ops! voce nao possui\nnenhuma tarefa</string>
 </resources>
